# sp2023c-example

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  package.json
src/: main.rs
src/resources/: ags.csv
src/resources/assets/: de_small.geojson  script.js  style.css
src/resources/templates/: index.html
web/: rspack.config.js  script.js
