[package]
name = "sp2023c-example"
version = "0.1.0"
edition = "2021"
authors = ["Paul-Christian Volkmer <code@pcvolkmer.de>"]
license = "AGPL-3"

[dependencies]
axum = { version = "0.8" }
askama = { version = "0.14" }
tokio = { version = "1.41", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.3" }
serde_json = {  version = "1.0" }

itertools = { version = "0.14" }
include_dir = "0.7"
strsim = "0.11"
regex = "1.11"
simple-log = "2.3"

moka = { version = "0.12", features = ["future"] }
futures = { version = "0.3" }
log = "0.4.22"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
